k8s/tmp/ingress.yaml
# Ingress for our components
# Note that the nginx ingress path /foo matches /foo, /foo/bar etc.
# To get the equivalent on GCE ingress you need two rules /foo and /foo/*
# Nginx seems OK to ignore the extra *
#
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openig
spec:
  tls:
    - secretName: ssl-secret
  backend:
          serviceName: openig
          servicePort: 80
  rules:

#  rules:
# Unless you want to use hostname based ingress, it is better to leave the
# Hostname out so it works for all paths
# If you are forwarding from another load balancer, make
# sure the LB sets the appropiate X-forwarded headers
# See for example:
# http://serverfault.com/questions/598202/make-nginx-to-pass-hostname-of-the-upstream-when-reverseproxying
#  - host: openig.master.test.com
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: openig
#          servicePort: 80
#      - path: /*
#        backend:
#          serviceName: openig
#          servicePort: 80
